fix(layout): fix padding containers on mobile
Remove padding top an bottom and increase padding left and right con containers

--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,7 @@ input[type=submit] {
 @media screen and (max-width: 649px) {
   .header-container,
 .main-content-container {
-    padding: 1rem;
+    padding: 0 1.5rem;
   }
 }
 
