--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -7,7 +7,7 @@
   }
 
   @include mq($tablet-width, down) {
-    padding: 1rem;
+    padding: 0 1.5rem;
   }
 }
 
